# python-templ

./: cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: .env.example  .gitignore  .gitlab-ci.yml  .verhovine.toml  Dockerfile  README.MD  newrelic.ini  pyproject.toml
{{cookiecutter.project_slug}}/src/tests/: conftest.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: app.py  cache.py  db.py  log_manager.py  routes.py  settings.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/commands/: __init__.py  server.py  shell.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/entities/: requests.py  responses.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/handlers/: __init__.py  duty.py  v1.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/models/: base.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/services/: dummy.py
