[[tool.poetry.source]]
name = "local"
url = "http://some.tass.local/repository/t-pypi/simple"

[tool.poetry]
name = "{{cookiecutter.project_infra_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["tass developers"]

[tool.poetry.dependencies]
python = "^3.8"
uvloop = "0.14.0"
cchardet = "2.1.5"
aiohttp = "3.6.2"
ipython = "7.8.0"
click = "7.0"
ptpython = "2.0.6"
cryptography = "2.7"
marshmallow = "3.3.0"
aiocache = "0.10.1"
peewee = "3.13.1"
peewee-async = "0.6.3a0"
aiomysql = "0.0.20"
ujson = "1.35"
msgpack = "0.6.1"
newrelic = "5.0.2.126"
tass-apispec = "1.1.0"
marshmallow-dataclass = "7.2.1"
tass-envmapping = "0.1.2"
tass-log-manager = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "5.3.2"
pytest-aiohttp = "0.3.0"
flake8 = "3.7.5"
faker = "4.0.0"
mock = "3.0.5"
pytest-cov = "2.7.1"

[tool.poetry.plugins."console_scripts"]
"{{cookiecutter.project_infra_name}}-ctl" = "{{cookiecutter.project_slug}}.commands:cli"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
